--- a/.github/workflows/sync-from-template-repo.yml
+++ b/.github/workflows/sync-from-template-repo.yml
@@ -8,7 +8,6 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
-      actions: write
 
     steps:
       # To use this repository's private action, you must check out the repository
@@ -23,4 +22,5 @@ jobs:
         uses: AndreasAugustin/actions-template-sync@v2
         with:
           source_repo_path: Webprogrammering-Lab/template-private
+          github_token: ${{ secrets.TEMPLATE_SYNC_ACTION }}
           # upstream_branch: <target_branch> # defaults to main
