--- a/.github/workflows/sync-from-template-repo.yml
+++ b/.github/workflows/sync-from-template-repo.yml
@@ -15,12 +15,13 @@ jobs:
         uses: actions/checkout@v4
         # https://github.com/actions/checkout#usage
         # uncomment if you use submodules within the repository
-        # with:
+        with:
+          token: ${{ secrets.TEMPLATE_SYNC_ACTION }}
         #   submodules: true
 
       - name: actions-template-sync
         uses: AndreasAugustin/actions-template-sync@v2
         with:
           source_repo_path: Webprogrammering-Lab/template-private
-          github_token: ${{ secrets.TEMPLATE_SYNC_ACTION }}
+          # github_token: ${{ secrets.TEMPLATE_SYNC_ACTION }}
           # upstream_branch: <target_branch> # defaults to main
